2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* output.h (debug): Don't define.
	* ia32-cmain.c (debug_dump): Update to use standard debug API.
	(modules_relocate): Likewise.
	* kip-fixup.c (kip_fixup): Likewise.
	* laden.c (main): Likewise.
	* loader.c (mem_check): Likewise.
	(loader_add_region): Likewise.
	(loader_regions_reserve): Likewise.

2008-06-06  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (find_components): Reserve 20% of available memory
	for L4.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am [ENABLE_TESTS]: Don't build package's program.

	* output-serial.c: Include <stdbool.h>.

	* Makefile.am (laden_CPPFLAGS, laden_CFLAGS, laden_LDFLAGS): Don't
	discard the respective AM_* flags and also add the respective KERNEL_*
	flags.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* laden.h (program_name): Change type to char *.
	* laden.c (program_name): Likewise.
	* shutdown.h (program_name): Likewise.
	* output.h (debug): Change program_name's type to char *.

2008-02-08  Thomas Schwinge  <tschwinge@gnu.org>

	* Makefile.am (laden_LDADD): Link against newlib's `libc-routines.a'.

2008-02-06  Neal H. Walfield  <neal@gnu.org>

	* output-serial.c (serial_init): Rewrite command-line parser to
	not use strtok.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (laden_LDADD): Set to ../libc-parts/libc-kernel.a,
	not ../libc-parts/libc-parts.a.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (laden_CPPFLAGS): Add -DS_PRINTF=printf.

2007-12-24  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (cmain): Cast PROGRAM_NAME to elide gcc warning.

2007-12-23  Neal H. Walfield  <neal@gnu.org>

	* laden.c (program_name): Remove extern qualifier.

2007-12-21  Neal H. Walfield  <neal@gnu.org>

	* ia32-cmain.c (KMEM_MAX): Set to the last valid byte, not the
	first invalid byte.

2007-11-16  Neal H. Walfield  <neal@gnu.org>

	* laden.h (program_name): Change type to a const char [].
	* laden.c (program_name): Likewise.